# qt_opengl

./: .gitignore  CMakeLists.txt  conanfile.py
l1_hello_window/: CMakeLists.txt
l1_hello_window/src/: glwidget.cpp  glwidget.h  mainwindow.cpp
l2_hello_triangle/: CMakeLists.txt
l2_hello_triangle/assets/shader/: default.vert
l2_hello_triangle/shaders/: default.vert
l2_hello_triangle/src/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h
l3_shaders/: CMakeLists.txt
l3_shaders/assets/shader/: default.vert
l3_shaders/shaders/: default.frag  default.vert
l3_shaders/src/: glwidget.cpp  glwidget.h  main.cpp
l4_textures/: CMakeLists.txt
l4_textures/assets/shader/: default.frag  default.vert
l4_textures/src/: glwidget.cpp  glwidget.h
l5_transformations/: CMakeLists.txt
l5_transformations/assets/shader/: default.frag  default.vert
l5_transformations/src/: glwidget.cpp  glwidget.h  mainwindow.ui
